--- a/index_bk.html
+++ b/index_bk.html
@@ -5,8 +5,8 @@
 		<meta charset="utf-8" />
 		<title></title>
 		<meta name="viewport" content="initial-scale=1, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, width=device-width">
-		<link rel="stylesheet" href="css/style.css?12221" />
-		<link rel="stylesheet" href="css/action.css?22333" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/action.css" />
 		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="js/touch.js"></script>
 	</head>
@@ -97,28 +97,7 @@
 		</div>
 		<script type="text/javascript" src="js/module.js"></script>
 		<script>
-			$.fn.mymodule({}, [
-				[
-					["#my_des1"],
-					["bottom-fade-in"]
-				],
-				[
-					["#my_des2"],
-					["top-fade-in"]
-				],
-				[
-					["#my_des3"],
-					["min-fade-in"]
-				],
-				[
-					["#my_des4"],
-					["right-fade-in"]
-				],
-				[
-					[".head_box",".mes01","mes02","mes04","mes04","zydwimg"],
-					["min-fade-in","left-fade-in","right-fade-in","left-fade-in","right-fade-in","min-fade-in"]
-				]
-			])
+			$.fn.mymodule()
 		</script>
 	</body>
 
